--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
         <!-- DIV-Table -->
         <div class="box">
-            <div class="box" style="display: flex; flex-wrap: nowrap;">
-                <div class="box" style="max-width: 30%;">
+            <div class="box box0">
+                <div class="box box1">
                     <!-- Intro -->
                     <div class="content-box cb-intro">
                         <h2>Who am I</h2>
@@ -59,9 +59,9 @@
                         <a href="./media/Eddy-Quiel-CV-Resume.pdf" target="_blank"><button>Download my life as PDF </button></a> 
                     </div>
                 </div>
-                <div class="box">
+                <div class="box box2">
                     <!-- Video -->
-                    <div class="content-box cb-intro" style="width: 100%;">
+                    <div class="content-box cb-intro">
                         <video id="playeri" playsinline controls>
                             <source src="./media/dog.mp4" type="video/mp4">
                             Your browser does not support the video tag.
@@ -97,11 +97,11 @@
                     </div>
                 </div>
             </div>
-            <div class="box" style="display: flex; flex-wrap: nowrap;">
+            <div class="box box3">
                 <!-- Languages -->
                 <div class="content-box cb-intro">
                     <h3>Languages</h3>
-                    <div style="display: flex; flex-direction: column; gap: 5px;">
+                    <div class="skill-section language">
                         <div class="skill-set">
                             <ul>
                                 <li>
@@ -299,5 +299,3 @@
     </script>
 </body>
 </html>
-
-
