--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="styles2.css">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="./plyr/plyr.css">
-    <title>Experience</title>
+    <link rel="icon" type="image/x-icon" href="./media/logo-duck.svg">
+    <title>About</title>
 </head>
 
 <style>
@@ -39,7 +40,7 @@
     
     <article>
         <h1>About Me</h1>
-
+          
         <!-- DIV-Table -->
         <div class="box">
             <div class="box box0">
@@ -99,7 +100,7 @@
             </div>
             <div class="box box3">
                 <!-- Languages -->
-                <div class="content-box cb-intro">
+                <div class="content-box cb-intro lg">
                     <h3>Languages</h3>
                     <div class="skill-section language">
                         <div class="skill-set">
@@ -299,3 +300,5 @@
     </script>
 </body>
 </html>
+
+
