--- a/portfoIio.html
+++ b/portfoIio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./plyr/plyr.css">
     <link rel="stylesheet" href="styles2.css">
+    <link rel="icon" type="image/x-icon" href="./media/logo-duck.svg">
     <title>Portfolio</title>
 </head>
 
@@ -167,6 +168,23 @@
                 </i>
                 <br>
                 This is written guide with a concise collection of knowledge and resources, ideal for incoming exchange students and people visiting Japan for the first time.
+            </p>
+        </div>
+
+
+        <div class="content-box">
+            <h2>
+                <a href="./index.html" target="_blank">This Website</a>
+            </h2> 
+            <p>
+                <a href="./index.html" target="_blank"><img src="./media/logo-duck.svg" alt="Favicon" class="plate"  style="float: left; max-height: 145px; margin-right: 10px;"></a>
+                <i>
+                    October 2024<br>
+                    Website - written in HTML & CSS <br>
+                </i>
+                <br>
+                I created a Portfolio-Website for myself. Most HTML & CSS code was written by me (the rest was hevaly modifyed by myself). <br>
+                The Source-Code and more information about this website can be found on its <a href="https://github.com/AnonSchlingel/Portfolio" target="_blank">GitHub-Page</a>.
             </p>
         </div>
     </article>
