--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles2.css">
     <link rel="stylesheet" href="contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./media/logo-duck.svg">
     <title>About</title>
 </head>
 
@@ -29,7 +30,7 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="./index.html">About</a></li>
+                <li><a href="./index.html">About Me</a></li>
                 <li><a href="./portfoIio.html">Portfolio</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
