--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,9 @@
     }
 </style>
 
+<!--Botpoison Script -->
+<script src="https://unpkg.com/@botpoison/browser" async></script>
+
 <body>
     <header>
         <nav class="navbar">
@@ -60,7 +63,7 @@
 
         <div class="content-box">
             <h2>Or write me a message</h2>
-            <form action="https://submit-form.com/p72xXFDow" method="post">
+            <form action="https://submit-form.com/p72xXFDow" method="post" data-botpoison-public-key="pk_2c2c26c6-2d5a-41f2-9218-867a7f2b2080">
                 <input type="email" name="email" placeholder="E-Mail" required>
                 <input type="text" name="name" placeholder="Name or Company" required>
                 <textarea name="message" placeholder="Type your message here..." required></textarea>
